integrator/integrator-auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  auth
  namespace: integration
  labels:
    app:  auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      serviceAccountName: integration-user
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: auth
        image: taraskrupko/integrator-auth:1.0.1
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 250Mi
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          httpGet:
            path: '/health'
            port: http
        ports:
        - containerPort:  8080
          name: http
      imagePullSecrets:
        - name: regcred
---

apiVersion: v1
kind: Service
metadata:
  name: auth
  namespace: integration
  labels:
    app: auth
spec:
  selector:
    app: auth
  type: ClusterIP
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 8080
