integrator/ui-back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ui-back
  namespace: integration
  labels:
    app:  ui-back
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-back
  template:
    metadata:
      labels:
        app: ui-back
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      serviceAccountName: integration-user
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      containers:
      - name: ui-back
        image: integrator-ui-back:1.0
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 250m
            memory: 250Mi
        livenessProbe:
          initialDelaySeconds: 5
          periodSeconds: 10
          failureThreshold: 3
          httpGet:
            path: '/health'
            port: http
        ports:
        - containerPort:  8080
          name: http

---

apiVersion: v1
kind: Service
metadata:
  name: ui-back
  namespace: integration
  labels:
    app: ui-back
spec:
  selector:
    app: ui-back
  type: ClusterIP
  ports:
  - protocol: TCP 
    port: 80
    targetPort: 8080
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    #nodePort:
