integrator/integrator-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: integrator-local-ingress
  namespace: integration
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: "nginx"
  rules:
    - host: tkrupko-integrator  # Хост для фронтенда
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ui-front
                port:
                  number: 80
    - host: tkrupko-integrator.api # Хост для бэкенда
      http:
        paths:
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ui-back
                port:
                  number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: integration-local-ingress
#   namespace: integration
#   annotations:
#     kubernetes.io/ingress.class: "nginx"
#     #nginx.ingress.kubernetes.io/rewrite-target: /$2  # Using regex capture groups
# spec:
#   ingressClassName: "nginx"
#   rules:
#   - host: integrator.local  # Set your desired host
#     http:
#       paths:
#       #- path: /ui-back.integration(/|$)(.*)  # Path to access another service. Match /ui-back and everything after
#       - path: /api  # Path to access another service. Match /ui-back and everything after
#         #pathType: ImplementationSpecific
#         pathType: Prefix
#         backend:
#           service:
#             name: ui-back  # Service name for another service
#             port:
#               number: 80
#       #- path: /ui-front.integration(/|$)(.*) # Path to access another service. Match /ui-front and everything after
#       - path: / # Path to access another service. Match /ui-front and everything after
#         #pathType: ImplementationSpecific
#         pathType: Prefix
#         backend:
#           service:
#             name: ui-front  # Service name for another service
#             port:
#               number: 80
#       # - path: /test-integration.integration(/|$)(.*)  # Path to access another service. Match /test-integration and everything after
#       #   pathType: ImplementationSpecific
#       #   backend:
#       #     service:
#       #       name: test-integration  # Service name for another service
#       #       port:
#       #         number: 80

# #example: access ui back - http://integrator.local/ui-back.integration/swagger/index.html
# #update ingress after created some integration to access it locally
